--- a/.env.preview
+++ b/.env.preview
@@ -1,3 +1,4 @@
+//请勿上传此文件的修改，除非增加字段
 NODE_ENV=production
 VUE_APP_PREVIEW=true
-VUE_APP_API_BASE_URL='http://222.196.37.2:3000'
+VUE_APP_API_BASE_URL = 'http://localhost:8080'
